# backup-codex

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASING.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
codex_backup/: __init__.py  __main__.py  cli.py  core.py  models.py
docs/: architecture.md  requirements.md  usage.md
tests/: test_backup_flow.py
